--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -31,6 +32,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
